<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dip"
        android:overScrollMode="never">

        <RelativeLayout
            android:id="@+id/rl_main"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_marginTop="0dp"
            >


            <FrameLayout android:visibility="visible"
                android:id="@+id/rl_frame1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingRight="0dip"
                android:paddingLeft="0dip"
                android:paddingBottom="0dip"
                android:layout_marginTop="0dip"
                android:layout_marginBottom="10dip"
                android:layout_marginStart="0dip"
                android:layout_marginEnd="0dip"
                >

                <ImageView
                    android:layout_marginTop="0dp"
                    android:id="@+id/iv_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/article_day"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:id="@+id/tv_title_0"
                    android:layout_marginStart="15dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_article_day"
                    android:textColor="@color/colorBlack"
                    />

                <TextView
                    android:id="@+id/tv_title_4"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="15dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/label_just_looking"
                    android:textColor="@color/colorWhite"
                    />
            </FrameLayout>


            <TextView
                android:id="@+id/tv_title_1"
                android:layout_below="@+id/rl_frame1"
                android:layout_marginStart="15dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/label_article"
                android:textColor="@color/colorBlack"
           />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFeatures"
            android:layout_below="@+id/tv_title_1"
            android:layout_marginTop="15dip"
            android:layout_marginStart="0dip"
            android:layout_marginEnd="0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

         <TextView
            android:id="@+id/tv_title_2"
            android:layout_below="@+id/recyclerFeatures"
            android:layout_marginStart="15dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/label_topics"
            android:textColor="@color/colorBlack"
         />

           <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTopics"
                android:layout_below="@+id/tv_title_2"
                android:layout_marginTop="15dip"
                android:layout_marginStart="0dip"
                android:layout_marginEnd="0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/tv_title_3"
                android:layout_below="@+id/recyclerTopics"
                android:layout_marginStart="15dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:text="@string/label_time_to_read"
                android:textColor="@color/colorBlack"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTimeToRead"
                android:layout_below="@+id/tv_title_3"
                android:layout_marginTop="15dip"
                android:layout_marginStart="0dip"
                android:layout_marginEnd="0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>