<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBlack"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_background"
                android:visibility="visible"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:layout_marginStart="0dp"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_height="match_parent"
                android:src="@drawable/unsplash3"
                 />


            <ImageView
                android:layout_marginTop="60dp"
                android:id="@+id/iv_title"
                android:visibility="visible"
                android:tint="@color/colorWhite"
                android:layout_marginEnd="50dip"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="50dp"
                android:layout_width="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_title"
                />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_below="@+id/iv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center"
                android:textSize="18sp"
                android:text="@string/label_customize_experience"
                android:textColor="@color/colorWhite"
                />

            <RelativeLayout
                android:id="@+id/rl_date"
                android:background="@drawable/btn_white"
                android:layout_below="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_date_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_calendar_screen"
                    android:text="@string/label_date_of_birth"
                    android:textColor="@color/colorGray"/>

                <ImageView
                    android:id="@+id/iv_date_picker"
                    android:contentDescription="@string/app_name"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="30dp"
                    android:tint="@color/colorGray"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:layout_height="30dp"
                    android:src="@drawable/calendar"
                    />

            </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_time"
            android:background="@drawable/btn_white"
            android:layout_below="@+id/rl_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textSize="@dimen/text_calendar_screen"
                android:text="@string/label_time"
                android:textColor="@color/colorGray"/>

            <ImageView
                android:id="@+id/iv_time_picker"
                android:contentDescription="@string/app_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:layout_width="30dp"
                android:tint="@color/colorGray"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_height="30dp"
                android:src="@drawable/wall_clock"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_timezone"
            android:background="@drawable/btn_white"
            android:layout_below="@+id/rl_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textSize="@dimen/text_calendar_screen"
                android:text="@string/label_timezone"
                android:textColor="@color/colorGray"/>

            <ImageView
                android:id="@+id/iv_timezone_picker"
                android:contentDescription="@string/app_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:layout_width="30dp"
                android:tint="@color/colorGray"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_height="30dp"
                android:src="@drawable/internet"
                />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/bt_save"
            android:background="@drawable/btn_calendar_screen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="3dp"
            android:foreground="?selectableItemBackground"
            android:paddingBottom="3dp"
            android:text="@string/label_save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>